RedlogParser/RedTraceParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/andrew/RiderProjects/adt-solver/RedlogParser/RedTrace.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class RedTraceParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, AND=4, OR=5, EQUAL=6, GR=7, LS=8, LEQ=9, NEQ=10, 
		GEQ=11, NCONG=12, BALL=13, NIL=14, PREAMBULA=15, POSTAMBULA=16, ID=17, 
		NUM=18, WS=19;
	public const int
		RULE_prog = 0, RULE_expr = 1, RULE_body = 2, RULE_mul = 3, RULE_ncgong = 4, 
		RULE_factor = 5, RULE_power = 6, RULE_num = 7, RULE_number = 8, RULE_id = 9, 
		RULE_and = 10, RULE_or = 11, RULE_equal = 12, RULE_gr = 13, RULE_ls = 14, 
		RULE_neq = 15, RULE_leq = 16, RULE_geq = 17, RULE_ball = 18, RULE_nil = 19;
	public static readonly string[] ruleNames = {
		"prog", "expr", "body", "mul", "ncgong", "factor", "power", "num", "number", 
		"id", "and", "or", "equal", "gr", "ls", "neq", "leq", "geq", "ball", "nil"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'.'", "'and'", "'or'", "'equal'", "'greaterp'", "'lessp'", 
		"'leq'", "'neq'", "'geq'", "'ncong'", "'ball'", "'nil'", "'(!*fof (pasf)'", 
		"'t)'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, "AND", "OR", "EQUAL", "GR", "LS", "LEQ", "NEQ", 
		"GEQ", "NCONG", "BALL", "NIL", "PREAMBULA", "POSTAMBULA", "ID", "NUM", 
		"WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "RedTrace.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static RedTraceParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public RedTraceParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public RedTraceParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PREAMBULA() { return GetToken(RedTraceParser.PREAMBULA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode POSTAMBULA() { return GetToken(RedTraceParser.POSTAMBULA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(RedTraceParser.Eof, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedTraceVisitor<TResult> typedVisitor = visitor as IRedTraceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40;
			Match(PREAMBULA);
			State = 41;
			expr();
			State = 42;
			Match(POSTAMBULA);
			State = 43;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AndContext and() {
			return GetRuleContext<AndContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OrContext or() {
			return GetRuleContext<OrContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NcgongContext ncgong() {
			return GetRuleContext<NcgongContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BodyContext body() {
			return GetRuleContext<BodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NilContext nil() {
			return GetRuleContext<NilContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EqualContext equal() {
			return GetRuleContext<EqualContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GrContext gr() {
			return GetRuleContext<GrContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LsContext ls() {
			return GetRuleContext<LsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NeqContext neq() {
			return GetRuleContext<NeqContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LeqContext leq() {
			return GetRuleContext<LeqContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GeqContext geq() {
			return GetRuleContext<GeqContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BallContext ball() {
			return GetRuleContext<BallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedTraceVisitor<TResult> typedVisitor = visitor as IRedTraceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(Context, State);
		EnterRule(_localctx, 2, RULE_expr);
		int _la;
		try {
			State = 112;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 45;
				Match(T__0);
				State = 46;
				and();
				State = 48;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 47;
					expr();
					}
					}
					State = 50;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==T__0 );
				State = 52;
				Match(T__1);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 54;
				Match(T__0);
				State = 55;
				or();
				State = 57;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 56;
					expr();
					}
					}
					State = 59;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==T__0 );
				State = 61;
				Match(T__1);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 63;
				Match(T__0);
				State = 64;
				ncgong();
				State = 65;
				body();
				State = 66;
				nil();
				State = 67;
				Match(T__1);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 69;
				Match(T__0);
				State = 70;
				equal();
				State = 71;
				body();
				State = 72;
				nil();
				State = 73;
				Match(T__1);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 75;
				Match(T__0);
				State = 76;
				gr();
				State = 77;
				body();
				State = 78;
				nil();
				State = 79;
				Match(T__1);
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 81;
				Match(T__0);
				State = 82;
				ls();
				State = 83;
				body();
				State = 84;
				nil();
				State = 85;
				Match(T__1);
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 87;
				Match(T__0);
				State = 88;
				neq();
				State = 89;
				body();
				State = 90;
				nil();
				State = 91;
				Match(T__1);
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 93;
				Match(T__0);
				State = 94;
				leq();
				State = 95;
				body();
				State = 96;
				nil();
				State = 97;
				Match(T__1);
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 99;
				Match(T__0);
				State = 100;
				geq();
				State = 101;
				body();
				State = 102;
				nil();
				State = 103;
				Match(T__1);
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 105;
				Match(T__0);
				State = 106;
				ball();
				State = 107;
				id();
				State = 108;
				expr();
				State = 109;
				expr();
				State = 110;
				Match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FactorContext[] factor() {
			return GetRuleContexts<FactorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FactorContext factor(int i) {
			return GetRuleContext<FactorContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumContext[] num() {
			return GetRuleContexts<NumContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumContext num(int i) {
			return GetRuleContext<NumContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MulContext[] mul() {
			return GetRuleContexts<MulContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MulContext mul(int i) {
			return GetRuleContext<MulContext>(i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_body; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.EnterBody(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.ExitBody(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedTraceVisitor<TResult> typedVisitor = visitor as IRedTraceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BodyContext body() {
		BodyContext _localctx = new BodyContext(Context, State);
		EnterRule(_localctx, 4, RULE_body);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			Match(T__0);
			State = 121;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 121;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
				case 1:
					{
					State = 115;
					factor();
					}
					break;
				case 2:
					{
					State = 116;
					num();
					}
					break;
				case 3:
					{
					State = 117;
					Match(T__0);
					State = 118;
					mul();
					State = 119;
					Match(T__1);
					}
					break;
				}
				}
				State = 123;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__0 || _la==T__2 );
			State = 125;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MulContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FactorContext[] factor() {
			return GetRuleContexts<FactorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FactorContext factor(int i) {
			return GetRuleContext<FactorContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PowerContext power() {
			return GetRuleContext<PowerContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumContext[] num() {
			return GetRuleContexts<NumContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumContext num(int i) {
			return GetRuleContext<NumContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MulContext[] mul() {
			return GetRuleContexts<MulContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MulContext mul(int i) {
			return GetRuleContext<MulContext>(i);
		}
		public MulContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mul; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.EnterMul(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.ExitMul(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedTraceVisitor<TResult> typedVisitor = visitor as IRedTraceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMul(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MulContext mul() {
		MulContext _localctx = new MulContext(Context, State);
		EnterRule(_localctx, 6, RULE_mul);
		int _la;
		try {
			State = 139;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 127;
				factor();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 128;
				power();
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					State = 135;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
					case 1:
						{
						State = 129;
						factor();
						}
						break;
					case 2:
						{
						State = 130;
						num();
						}
						break;
					case 3:
						{
						State = 131;
						Match(T__0);
						State = 132;
						mul();
						State = 133;
						Match(T__1);
						}
						break;
					}
					}
					State = 137;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==T__0 || _la==T__2 );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NcgongContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NCONG() { return GetToken(RedTraceParser.NCONG, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FactorContext[] factor() {
			return GetRuleContexts<FactorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FactorContext factor(int i) {
			return GetRuleContext<FactorContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumContext[] num() {
			return GetRuleContexts<NumContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumContext num(int i) {
			return GetRuleContext<NumContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MulContext[] mul() {
			return GetRuleContexts<MulContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MulContext mul(int i) {
			return GetRuleContext<MulContext>(i);
		}
		public NcgongContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ncgong; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.EnterNcgong(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.ExitNcgong(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedTraceVisitor<TResult> typedVisitor = visitor as IRedTraceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNcgong(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NcgongContext ncgong() {
		NcgongContext _localctx = new NcgongContext(Context, State);
		EnterRule(_localctx, 8, RULE_ncgong);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			Match(T__0);
			State = 142;
			Match(NCONG);
			State = 149;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 149;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
				case 1:
					{
					State = 143;
					factor();
					}
					break;
				case 2:
					{
					State = 144;
					num();
					}
					break;
				case 3:
					{
					State = 145;
					Match(T__0);
					State = 146;
					mul();
					State = 147;
					Match(T__1);
					}
					break;
				}
				}
				State = 151;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__0 || _la==T__2 );
			State = 153;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FactorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PowerContext power() {
			return GetRuleContext<PowerContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public FactorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_factor; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.EnterFactor(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.ExitFactor(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedTraceVisitor<TResult> typedVisitor = visitor as IRedTraceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFactor(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FactorContext factor() {
		FactorContext _localctx = new FactorContext(Context, State);
		EnterRule(_localctx, 10, RULE_factor);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 155;
			Match(T__0);
			State = 156;
			power();
			State = 157;
			Match(T__2);
			State = 158;
			number();
			State = 159;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PowerContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public PowerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_power; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.EnterPower(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.ExitPower(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedTraceVisitor<TResult> typedVisitor = visitor as IRedTraceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPower(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PowerContext power() {
		PowerContext _localctx = new PowerContext(Context, State);
		EnterRule(_localctx, 12, RULE_power);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 161;
			Match(T__0);
			State = 162;
			id();
			State = 163;
			Match(T__2);
			State = 164;
			number();
			State = 165;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public NumContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_num; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.EnterNum(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.ExitNum(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedTraceVisitor<TResult> typedVisitor = visitor as IRedTraceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNum(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumContext num() {
		NumContext _localctx = new NumContext(Context, State);
		EnterRule(_localctx, 14, RULE_num);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 167;
			Match(T__2);
			State = 168;
			number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUM() { return GetToken(RedTraceParser.NUM, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.EnterNumber(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.ExitNumber(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedTraceVisitor<TResult> typedVisitor = visitor as IRedTraceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumberContext number() {
		NumberContext _localctx = new NumberContext(Context, State);
		EnterRule(_localctx, 16, RULE_number);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 170;
			Match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(RedTraceParser.ID, 0); }
		public IdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_id; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.EnterId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.ExitId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedTraceVisitor<TResult> typedVisitor = visitor as IRedTraceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitId(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdContext id() {
		IdContext _localctx = new IdContext(Context, State);
		EnterRule(_localctx, 18, RULE_id);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 172;
			Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AndContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AND() { return GetToken(RedTraceParser.AND, 0); }
		public AndContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_and; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.EnterAnd(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRedTraceListener typedListener = listener as IRedTraceListener;
			if (typedListener != null) typedListener.ExitAnd(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRedTraceVisitor<TResult> typedVisitor = visitor as IRedTraceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAnd(this);
			else return visitor.VisitChildren(this);
		}
	}
